--- a/editor.html
+++ b/editor.html
@@ -37,7 +37,7 @@
         <div class="inner" id="controls" height="500px">
             <table>
                 <tr>
-                    <td>Setting 1</td>
+                    <td>Eyes</td>
                     <td id="slider1Container"></td>
                 </tr>
                 <tr>
