--- a/editor.html
+++ b/editor.html
@@ -41,7 +41,7 @@
                     <td id="slider1Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 2</td>
+                    <td>mouths</td>
                     <td id="slider2Container"></td>
                 </tr>
                 <tr>
