--- a/editor.html
+++ b/editor.html
@@ -41,15 +41,15 @@
                     <td id="slider1Container"></td>
                 </tr>
                 <tr>
-                    <td>mouths</td>
+                    <td>Mouths</td>
                     <td id="slider2Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 3</td>
+                    <td>Poses</td>
                     <td id="slider3Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 4</td>
+                    <td>Rotation</td>
                     <td id="slider4Container"></td>
                 </tr>
                 <tr>
