--- a/editor.html
+++ b/editor.html
@@ -53,7 +53,7 @@
                     <td id="slider4Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 5</td>
+                    <td>props</td>
                     <td id="slider5Container"></td>
                 </tr>
                 <tr>
