--- a/editor.html
+++ b/editor.html
@@ -53,11 +53,11 @@
                     <td id="slider4Container"></td>
                 </tr>
                 <tr>
-                    <td>props</td>
+                    <td>Props</td>
                     <td id="slider5Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 6</td>
+                    <td> </td>
                     <td id="slider6Container"></td>
                 </tr>
                 <tr>
