--- a/editor.html
+++ b/editor.html
@@ -57,7 +57,7 @@
                     <td id="slider5Container"></td>
                 </tr>
                 <tr>
-                    <td> </td>
+                    <td> Background Colour</td>
                     <td id="slider6Container"></td>
                 </tr>
                 <tr>
